--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <li><a href="e6/index.html">Exercise 6</a></li>
       <li><a href="e7/e7.png">Exercise 7</a></li>
       <li><a href="e8/index.html">Exercise 8</a></li>
+      <li><a href="">Exercise 9 WIP</a></li>
+      <li><a href="">Exercise 10 WIP</a></li>
+      <li><a href="">Exercise 11 WIP</a></li>
+      <li><a href="">Exercise 12 WIP</a></li>
 
       <h2> Projects </h2>
       <li><a href="p1/index.html">Project 1</a></li>
