--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="">Exercise 9 WIP</a></li>
       <li><a href="">Exercise 10 WIP</a></li>
       <li><a href="">Exercise 11 WIP</a></li>
-      <li><a href="">Exercise 12 WIP</a></li>
+      <li><a href="e13/index.html">Exercise 13</a></li>
 
       <h2> Projects </h2>
       <li><a href="p1/index.html">Project 1</a></li>
