--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <li><a href="e6/index.html">Exercise 6</a></li>
       <li><a href="e7/e7.png">Exercise 7</a></li>
       <li><a href="e8/index.html">Exercise 8</a></li>
-      <li><a href="">Exercise 9 WIP</a></li>
-      <li><a href="">Exercise 10 WIP</a></li>
-      <li><a href="">Exercise 11 WIP</a></li>
+      <li><a href="e9/index.html">Exercise 9</a></li>
+      <li><a href="e10/index.html">Exercise 10</a></li>
+      <li><a href="e11/index.html">Exercise 11</a></li>
       <li><a href="e13/index.html">Exercise 13</a></li>
 
       <h2> Projects </h2>
