--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <h2> Projects </h2>
       <li><a href="p1/index.html">Project 1</a></li>
       <li><a href="p2/index.html">Project 2</a></li>
+      <li><a href="p3/index.html">Project 3</a></li>
     </ul>
   </body>
 </html>
