--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="p1/index.html">Project 1</a></li>
       <li><a href="p2/index.html">Project 2</a></li>
       <li><a href="p3/index.html">Project 3</a></li>
+      <li><a href="p4/p4Designs.pdf">Project 4</a></li>
     </ul>
   </body>
 </html>
