--- a/p3/index.html
+++ b/p3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <title>Project 3</title>
     <link rel="stylesheet" href="css/main.css"
@@ -9,6 +10,13 @@
     <div class="hero">
     </div>
     <div id="main-container">
+      <div class="page-title">
+        <h1> The Early History of the Roman Empire </h1>
+        <div class="page-intro">
+          <p>The history of the Roman Empire covers the history of ancient Rome from the fall of the Roman Republic in 27 BC until the abdication of the last Western emperor in AD 476. Rome had begun expanding shortly after the founding of the Republic in the 6th century BC, though it did not expand outside of the Italian Peninsula until the 3rd century BC. Civil war engulfed the Roman state in the mid 1st century BC, first between Julius Caesar and Pompey, and finally between Octavian and Mark Antony. Antony was defeated at the Battle of Actium in 31 BC. In 27 BC the Senate and People of Rome made Octavian imperator ("commander") thus beginning the Principate, the first epoch of Roman imperial history usually dated from 27 BC to AD 284; they later awarded him the name Augustus, "the venerated". 
+          </p>
+          </div>
+        </div>
         <div class="column1">
           <div class="columnheader">
           <h1>27 BC - AD 14: Augustus</h1>
